# windows_audio_lib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  audiobuffer.cpp  audiobuffer.h  audiodata.cpp  audiodata.h  audiofile.cpp  audiofile.h  audioformat.cpp  audioformat.h  complex.cpp  complex.h  device.cpp  device.h  deviceexplorer.cpp  deviceexplorer.h  devicemanager.cpp  devicemanager.h  devicethread.cpp  devicethread.h  dsp.cpp  dsp.h  filter.cpp  filter.h  general.h  helpers.h  main.cpp  noise.cpp  noise.h  playbackdevice.cpp  playbackdevice.h  recordingdevice.cpp  recordingdevice.h  ringbuffer.cpp  ringbuffer.h  types.cpp  (+9 more)
.github/workflows/: ci.yml
cmake/: GoogleTest.cmake
examples/: CMakeLists.txt
examples/capture/: CMakeLists.txt  main.cpp
examples/dsp_spectrum/: CMakeLists.txt  main.cpp
examples/loopback/: CMakeLists.txt  main.cpp
examples/playback/: CMakeLists.txt  main.cpp
include/slk/: audiobuffer.h  audiodata.h  audiofile.h  audioformat.h  device.h  deviceexplorer.h  devicemanager.h  general.h  inputdevice.h  outputdevice.h  ringbuffer.h  sound_capture.h  types.h  wasapidevice.h  wasapiinputdevice.h  wasapioutputdevice.h
include/slk/dsp/: complex.h  dsp.h  filter.h  noise.h  window.h
scripts/: run-clang-format.sh  run-clang-tidy.sh
src/: audiobuffer.cpp  audiodata.cpp  audiofile.cpp  audioformat.cpp  complex.cpp  device.cpp  deviceexplorer.cpp  deviceinfo.h  devicemanager.cpp  devicethread.h  dsp.cpp  filter.cpp  helpers.h  noise.cpp  ringbuffer.cpp  types.cpp  wasapidevice.cpp  wasapidevice.h  wasapiinputdevice.cpp  wasapiinputdevice.h  wasapioutputdevice.cpp  wasapioutputdevice.h  window.cpp
src/windows/: wasapidevice.h  wasapioutputdevice.cpp
tests/: CMakeLists.txt  test_audiobuffer.cpp  test_audioformat.cpp  test_devices.cpp  test_dsp.cpp  test_literals.cpp  test_ringbuffer.cpp
utils/: CMakeLists.txt  utils.h
